# MLLab

./: .gitignore  README.md  main.py  pyproject.toml
.ipynb_checkpoints/: p1-checkpoint.ipynb
P1/: notebook.ipynb
P2/: notebook.ipynb  p2.ipynb
P3/: notebook.ipynb  p3.ipynb
P4/: notebook.ipynb  p4.ipynb
P4/.ipynb_checkpoints/: notebook-checkpoint.ipynb  p4-checkpoint.ipynb
P5/: notebook.ipynb  p5.ipynb
P5/.ipynb_checkpoints/: notebook-checkpoint.ipynb
P6/: notebook.ipynb
P7/: notebook.ipynb
P7/.ipynb_checkpoints/: notebook-checkpoint.ipynb
P8/: notebook.ipynb
p1/: p1.ipynb
p1/.ipynb_checkpoints/: p1-checkpoint.ipynb
p10/: p10.ipynb
p2/: p2.ipynb
p3/: p3.ipynb
p4/: p4.ipynb
p5/: p5.ipynb
p6/: p6.ipynb
p7/: notebook.ipynb
p8/: notebook.ipynb
p9/: p9.ipynb
